y a plus d'érreur pour l'instant

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="e_mail">e mail</string>
     <string name="num_ro_de_votre_calendrier_gxxxx">numéro de votre calendrier (gXXXX)</string>
     <string name="gxxxx">numéro de votre calendrier (gXXXX)</string>
+    <string name="download">download</string>
 </resources>
