--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Isync</string>
     <string name="g">G</string>
     <string name="gxxxx">numéro de votre calendrier (gXXXX)</string>
+    <string name="connexion_google">connexion google</string>
 </resources>
