--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Isync</string>
     <string name="g">G</string>
-    <string name="num_ro_de_votre_calendrier">numéro de votre calendrier</string>
-    <string name="e_mail">e mail</string>
-    <string name="num_ro_de_votre_calendrier_gxxxx">numéro de votre calendrier (gXXXX)</string>
+    <string name="num_ro_de_votre_calendrier" translatable="false">numéro de votre calendrier</string>
+    <string name="e_mail" translatable="false">e mail</string>
+    <string name="num_ro_de_votre_calendrier_gxxxx" translatable="false">numéro de votre calendrier (gXXXX)</string>
     <string name="gxxxx">numéro de votre calendrier (gXXXX)</string>
-    <string name="download">download</string>
+    <string name="download" translatable="false">download</string>
     <string name="connexion_google">connexion google</string>
+    <string name="default_web_client_id" translatable="false">YOUR_DEFAULT_WEB_CLIENT_ID</string>
 </resources>
